--- a/package.json
+++ b/package.json
@@ -1,26 +1,25 @@
 {
   "name": "superthing-v6",
   "version": "1.0.0",
-  "private": true,
   "homepage": "https://ajayvinukonda-ofc.github.io/superthing-v6",
+  "private": true,
   "dependencies": {
-    "framer-motion": "^10.12.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
-    "@types/react": "^19.1.12",
-    "@types/react-dom": "^19.1.9",
+    "@types/react": "^18.2.7",
+    "@types/react-dom": "^18.2.4",
     "gh-pages": "^5.0.0"
   },
   "eslintConfig": {
